--- a/src/app/layouts/customer-layout/customer/customer.component.html
+++ b/src/app/layouts/customer-layout/customer/customer.component.html
@@ -1,1 +1,4 @@
-<p>customer works!</p>
+
+    <app-customer-header></app-customer-header>
+    <router-outlet></router-outlet>
+    <app-customer-footer></app-customer-footer>
