--- a/src/app/layouts/customer-layout/customer/customer.component.html
+++ b/src/app/layouts/customer-layout/customer/customer.component.html
@@ -1,4 +1,18 @@
 
+<div class="container-fluid main-wrapper">
     <app-customer-header></app-customer-header>
+<div class="container welcome-container left-gradient">
     <router-outlet></router-outlet>
-    <app-customer-footer></app-customer-footer>
+    <!-- <app-help-desk></app-help-desk> -->
+</div>
+
+
+</div>
+<div class="container-fluid">
+<div class="footer">
+    <div class="main-footer">
+        <app-customer-footer></app-customer-footer>
+    </div>
+</div>
+</div>
+    
