change image url

--- a/src/app/layouts/customer-layout/introduction/confirmation/confirmation/confirmation.component.html
+++ b/src/app/layouts/customer-layout/introduction/confirmation/confirmation/confirmation.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-3 text-end">
-    <img src="assets/images/model-3.png" class="model-1">
+    <img src="assets/customer/images/model-3.png" class="model-1">
   </div>
   <div class="col-lg-9">
     <div class="speech-bubble">
@@ -31,12 +31,12 @@
             <div class="col-lg-12 text-center">
               <div class="purchase d-inline">
                 <button>
-                  <img src="assets/images/reload.png"><span>Reschedule Appointment</span>
+                  <img src="assets/customer/images/reload.png"><span>Reschedule Appointment</span>
                 </button>
               </div>
               <div class="skip d-inline">
                 <button (click)="cancelAppointment()">
-                  <img src="assets/images/cross.png"><span>Cancel Appointment</span></button>
+                  <img src="assets/customer/images/cross.png"><span>Cancel Appointment</span></button>
                 </div>
               </div>
             </div>
