--- a/src/app/layouts/customer-layout/introduction/consultation-appointment/consultation-appointment/consultation-appointment.component.html
+++ b/src/app/layouts/customer-layout/introduction/consultation-appointment/consultation-appointment/consultation-appointment.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-3 text-end">
-    <img src="assets/images/model-4.png" class="model-1">
+    <img src="assets/customer/images/model-4.png" class="model-1">
   </div>
   <div class="col-lg-9">
     <div class="speech-bubble">
