--- a/src/app/layouts/customer-layout/introduction/profit-calculator/profit-calculator/profit-calculator.component.html
+++ b/src/app/layouts/customer-layout/introduction/profit-calculator/profit-calculator/profit-calculator.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-3 text-end">
-      <img src="assets/images/model-1.png" class="model-3">
+      <img src="assets/customer/images/model-1.png" class="model-3">
     </div>
     <div class="col-lg-9">
       <div class="speech-bubble">
@@ -39,7 +39,7 @@
                 </thead>
                 <tbody>
                   <tr valign="middle">
-                    <td><img src="assets/images/table-img.png" class="mx-3"> African Mango “Ultra Burn” Drops
+                    <td><img src="assets/customer/images/table-img.png" class="mx-3"> African Mango “Ultra Burn” Drops
                     </td>
                     <td class="text-center"><span class="blue-txt">ROC121</span></td>
                     <td class="text-center">$7.97</td>
