--- a/src/app/layouts/customer-layout/introduction/selected-skus/selected-skus/selected-skus.component.html
+++ b/src/app/layouts/customer-layout/introduction/selected-skus/selected-skus/selected-skus.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
     <div class="col-lg-3 text-end">
-      <img src="assets/images/model-4.png" class="model-3">
+      <img src="assets/customer/images/model-4.png" class="model-3">
     </div>
     <div class="col-lg-9">
       <div class="speech-bubble">
@@ -41,7 +41,7 @@
                 </thead>
                 <tbody>
                   <tr valign="middle">
-                    <td><img src="assets/images/table-img.png" class="mx-3"> African Mango “Ultra Burn” Drops
+                    <td><img src="assets/customer/images/table-img.png" class="mx-3"> African Mango “Ultra Burn” Drops
                     </td>
                     <td class="text-center"><span class="blue-txt">ROC121</span></td>
                     <td class="text-center">$7.97</td>
@@ -66,7 +66,7 @@
                 <textarea class="form-input" cols="20"></textarea>
             </div>
               <div class="form-group">
-                <label class="form-label w-100">SKU Price <div class="float-end"><img src="assets/images/calculator.png" class="mx-2">Cost Vs Profit Calculator</div></label>
+                <label class="form-label w-100">SKU Price <div class="float-end"><img src="assets/customer/images/calculator.png" class="mx-2">Cost Vs Profit Calculator</div></label>
                   <input type="text" class="form-input" placeholder="$  00.00">
               </div>
               
@@ -89,7 +89,7 @@
                 </thead>
                 <tbody>
                   <tr valign="middle">
-                    <td><img src="assets/images/table-img.png" class="mx-3"> African Mango “Ultra Burn” Drops
+                    <td><img src="assets/customer/images/table-img.png" class="mx-3"> African Mango “Ultra Burn” Drops
                     </td>
                     <td class="text-center"><span class="blue-txt">ROC121</span></td>
                     <td class="text-center">$7.97</td>
@@ -114,7 +114,7 @@
                 <textarea class="form-input" cols="20"></textarea>
             </div>
               <div class="form-group">
-                <label class="form-label w-100">SKU Price <div class="float-end"><img src="assets/images/calculator.png" class="mx-2">Cost Vs Profit Calculator</div></label>
+                <label class="form-label w-100">SKU Price <div class="float-end"><img src="assets/customer/images/calculator.png" class="mx-2">Cost Vs Profit Calculator</div></label>
                   <input type="text" class="form-input" placeholder="$  00.00">
               </div>
               
@@ -138,7 +138,7 @@
               </thead>
               <tbody>
                 <tr valign="middle">
-                  <td><img src="assets/images/table-img.png" class="mx-3"> African Mango “Ultra Burn” Drops
+                  <td><img src="assets/customer/images/table-img.png" class="mx-3"> African Mango “Ultra Burn” Drops
                   </td>
                   <td class="text-center"><span class="blue-txt">ROC121</span></td>
                   <td class="text-center">$7.97</td>
@@ -163,7 +163,7 @@
               <textarea class="form-input" cols="20"></textarea>
           </div>
             <div class="form-group">
-              <label class="form-label w-100">SKU Price <div class="float-end"><img src="assets/images/calculator.png" class="mx-2">Cost Vs Profit Calculator</div></label>
+              <label class="form-label w-100">SKU Price <div class="float-end"><img src="assets/customer/images/calculator.png" class="mx-2">Cost Vs Profit Calculator</div></label>
                 <input type="text" class="form-input" placeholder="$  00.00">
             </div>
             
@@ -176,8 +176,8 @@
 
           <!-- <div class="row mt-3">
             <div class="col-lg-12 text-center mb-4">
-              <div class="purchase d-inline"><button><img src="assets/images/thump-up.png"><span>SKU selection are OK</span></button></div>
-              <div class="skip d-inline"><button><img src="assets/images/thump-down.png"><span>NO, I need Select SKU again</span></button></div>
+              <div class="purchase d-inline"><button><img src="assets/customer/images/thump-up.png"><span>SKU selection are OK</span></button></div>
+              <div class="skip d-inline"><button><img src="assets/customer/images/thump-down.png"><span>NO, I need Select SKU again</span></button></div>
               <div class="clearfix"></div>
             </div>
             <div class="clearfix"></div>
