--- a/src/app/layouts/customer-layout/introduction/sku-list/stock-sku-list/stock-sku-list.component.html
+++ b/src/app/layouts/customer-layout/introduction/sku-list/stock-sku-list/stock-sku-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-3 text-end">
-    <img src="assets/images/model-1.png" class="model-1">
+    <img src="assets/customer/images/model-1.png" class="model-1">
   </div>
   <div class="col-lg-9">
     <div class="speech-bubble">
@@ -36,7 +36,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="cont-wrapper-appo">
-                  <img src="assets/images/sku-list.png" class="">
+                  <img src="assets/customer/images/sku-list.png" class="">
                   <div class="sku-content-wrapper">
                     <p class="sku-content-wrapper-bold">Best Sellers Blend </p>
                     <p>SKU: <span class="blue-color-txt sku-content-wrapper-bold">ROC105</span></p>
@@ -55,7 +55,7 @@
               </div>
               <div class="col-lg-4">
                 <div class="cont-wrapper-appo">
-                  <img src="assets/images/sku-list.png" class="">
+                  <img src="assets/customer/images/sku-list.png" class="">
                   <div class="sku-content-wrapper">
                     <p class="sku-content-wrapper-bold">Best Sellers Blend </p>
                     <p>SKU: <span class="blue-color-txt sku-content-wrapper-bold">ROC105</span></p>
@@ -74,7 +74,7 @@
               </div>
               <div class="col-lg-4">
                 <div class="cont-wrapper-appo">
-                  <img src="assets/images/sku-list.png" class="">
+                  <img src="assets/customer/images/sku-list.png" class="">
                   <div class="sku-content-wrapper">
                     <p class="sku-content-wrapper-bold">Best Sellers Blend </p>
                     <p>SKU: <span class="blue-color-txt sku-content-wrapper-bold">ROC105</span></p>
