--- a/src/app/layouts/customer-layout/introduction/sku-moq/additional-sku-moq/additional-sku-moq.component.html
+++ b/src/app/layouts/customer-layout/introduction/sku-moq/additional-sku-moq/additional-sku-moq.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="col-lg-3 text-end">
-    <img src="assets/images/model-3.png" class="model-1">
+    <img src="assets/customer/images/model-3.png" class="model-1">
   </div>
   <div class="col-lg-9">
     <div class="speech-bubble">
@@ -68,7 +68,7 @@
                               </tr>
                               <tr>
                                   <td></td>
-                                  <td>Card Number<span class="float-end"><img src="assets/images/visa.png"></span></td>
+                                  <td>Card Number<span class="float-end"><img src="assets/customer/images/visa.png"></span></td>
                                   
                               </tr>
                               <tr>
@@ -86,7 +86,7 @@
                               </tr>
                               <tr>
                                   
-                                  <td colspan="2"><button class="next mt-3 w-90 m-auto d-block"><img src="assets/images/pay.png" class="mr-2"> add a new card</button>
+                                  <td colspan="2"><button class="next mt-3 w-90 m-auto d-block"><img src="assets/customer/images/pay.png" class="mr-2"> add a new card</button>
                                   </td>
                               </tr>
                           </tbody>
