--- a/src/app/layouts/customer-layout/introduction/sku-selection/sku-selection/sku-selection.component.html
+++ b/src/app/layouts/customer-layout/introduction/sku-selection/sku-selection/sku-selection.component.html
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-lg-3 text-end">
-    <img src="assets/images/model-3.png" class="model-1">
+    <img src="assets/customer/images/model-3.png" class="model-1">
   </div>
   <div class="col-lg-9">
     <div class="speech-bubble">
@@ -20,7 +20,7 @@
         <h5 class="appo-heading">Appointment for:</h5>
         <div class="appo-content">
           <div class="row">
-            <img src="assets/images/sku-selection.png" class="w-100">
+            <img src="assets/customer/images/sku-selection.png" class="w-100">
           </div>
           <div class="row sku-btn-part mt-4">
             <div class="col-lg-6 m-auto">
