--- a/src/app/layouts/customer-layout/introduction/brand/brand.component.html
+++ b/src/app/layouts/customer-layout/introduction/brand/brand.component.html
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-lg-3 text-end">
-        <img src="assets/images/model-3.png" class="model-1">
+        <img src="assets/customer/images/model-3.png" class="model-1">
     </div>
     <div class="col-lg-9">
         <div class="speech-bubble">
