--- a/src/app/layouts/customer-layout/introduction/bundle-skus/bundle-skus/bundle-skus.component.html
+++ b/src/app/layouts/customer-layout/introduction/bundle-skus/bundle-skus/bundle-skus.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-3 text-end">
-    <img src="assets/images/model-3.png" class="model-3">
+    <img src="assets/customer/images/model-3.png" class="model-3">
   </div>
   <div class="col-lg-9">
     <div class="speech-bubble">
@@ -43,7 +43,7 @@
               </div>
               <div class="form-group">
                 <label class="form-label w-100">Bundle Price <div class="float-end"><img
-                      src="assets/images/calculator.png" class="mx-2">Cost Vs Profit Calculator</div></label>
+                      src="assets/customer/images/calculator.png" class="mx-2">Cost Vs Profit Calculator</div></label>
                 <input type="text" class="form-input" placeholder="$  00.00">
               </div>
 
@@ -69,36 +69,36 @@
               </thead>
               <tbody>
                 <tr valign="middle">
-                  <td><img src="assets/images/table-img.png" class="mx-3"> Best Sellers Blend</td>
+                  <td><img src="assets/customer/images/table-img.png" class="mx-3"> Best Sellers Blend</td>
                   <td class="text-center"><span class="blue-txt">ROC121</span></td>
                   <td class="text-center">$8.97</td>
                   <td class="text-center"><input type="number" value="1" class="custom-number-fld"></td>
 
-                  <td class="text-center"><a href="" class="mr-0"><img src="assets/images/table-ico-2.png"></a></td>
+                  <td class="text-center"><a href="" class="mr-0"><img src="assets/customer/images/table-ico-2.png"></a></td>
                 </tr>
                 <tr valign="middle">
-                  <td><img src="assets/images/table-img.png" class="mx-3"> Best Sellers Blend</td>
+                  <td><img src="assets/customer/images/table-img.png" class="mx-3"> Best Sellers Blend</td>
                   <td class="text-center"><span class="blue-txt">ROC121</span></td>
                   <td class="text-center">$8.97</td>
                   <td class="text-center"><input type="number" value="1" class="custom-number-fld"></td>
 
-                  <td class="text-center"><a href="" class="mr-0"><img src="assets/images/table-ico-2.png"></a></td>
+                  <td class="text-center"><a href="" class="mr-0"><img src="assets/customer/images/table-ico-2.png"></a></td>
                 </tr>
                 <tr valign="middle">
-                  <td><img src="assets/images/table-img.png" class="mx-3"> Best Sellers Blend</td>
+                  <td><img src="assets/customer/images/table-img.png" class="mx-3"> Best Sellers Blend</td>
                   <td class="text-center"><span class="blue-txt">ROC121</span></td>
                   <td class="text-center">$8.97</td>
                   <td class="text-center"><input type="number" value="1" class="custom-number-fld"></td>
 
-                  <td class="text-center"><a href="" class="mr-0"><img src="assets/images/table-ico-2.png"></a></td>
+                  <td class="text-center"><a href="" class="mr-0"><img src="assets/customer/images/table-ico-2.png"></a></td>
                 </tr>
                 <tr valign="middle">
-                  <td><img src="assets/images/table-img.png" class="mx-3"> Best Sellers Blend</td>
+                  <td><img src="assets/customer/images/table-img.png" class="mx-3"> Best Sellers Blend</td>
                   <td class="text-center"><span class="blue-txt">ROC121</span></td>
                   <td class="text-center">$8.97</td>
                   <td class="text-center"><input type="number" value="1" class="custom-number-fld"></td>
 
-                  <td class="text-center"><a href="" class="mr-0"><img src="assets/images/table-ico-2.png"></a></td>
+                  <td class="text-center"><a href="" class="mr-0"><img src="assets/customer/images/table-ico-2.png"></a></td>
                 </tr>
               </tbody>
             </table>
