--- a/src/app/layouts/customer-layout/introduction/information-verification/information-verification/information-verification.component.html
+++ b/src/app/layouts/customer-layout/introduction/information-verification/information-verification/information-verification.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-3 text-end">
-    <img src="assets/images/model-3.png" class="model-1">
+    <img src="assets/customer/images/model-3.png" class="model-1">
   </div>
   <div class="col-lg-9">
     <div class="speech-bubble">
@@ -28,7 +28,7 @@
         <div class="appo-content">
           <div class="row">
             <div class="col">
-              <div class="purchase float-end"><button><img src="assets/images/edit-ico.png" class="mr-2"><span>edit-ico.png  Edit time slot</span></button></div>
+              <div class="purchase float-end"><button><img src="assets/customer/images/edit-ico.png" class="mr-2"><span>edit-ico.png  Edit time slot</span></button></div>
             </div>
           </div>
           <div class="form-group">
@@ -43,7 +43,7 @@
         <label class="form-label">Email </label>
         <input type="text" class="form-input" placeholder="alex2012david@yourmail.com">
     </div>
-    <div><button class="next mt-3 w-90 m-auto d-block"><img src="assets/images/thump-up.png" class="mr-2"> YES, Everything looks good</button></div>
+    <div><button class="next mt-3 w-90 m-auto d-block"><img src="assets/customer/images/thump-up.png" class="mr-2"> YES, Everything looks good</button></div>
         </div>
        
       </div>
