--- a/src/app/layouts/customer-layout/introduction/product-consultation/product-consultation.component.html
+++ b/src/app/layouts/customer-layout/introduction/product-consultation/product-consultation.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
     <div class="col-lg-3 text-end">
-        <img src="assets/images/model-2.png" class="model-1">
+        <img src="assets/customer/images/model-2.png" class="model-1">
     </div>
     <div class="col-lg-9">
         <div class="speech-bubble">
@@ -13,7 +13,7 @@
         <div class="cont-wrapper">
             <div class="content-body mt-5">
                 <div class="page">
-                    <img src="assets/images/sku-img.jpg" class="w-100">
+                    <img src="assets/customer/images/sku-img.jpg" class="w-100">
                     <div class="product-fee mt-3 text-center">
                         <span>Product Consultation Fee<br>
                             (VIP Membership)</span><br>
@@ -22,13 +22,13 @@
                     <div class="row mt-3">
                         <div class="col-lg-12 text-center">
                             <div class="purchase d-inline">
-                                <button><img src="assets/images/scedule.png">
+                                <button><img src="assets/customer/images/scedule.png">
                                     <span>Schedule Your Consultation</span></button>
                                 
                             </div>
                             <div class="skip d-inline">
                                 <button>
-                                <img src="assets/images/thump-down.png">
+                                <img src="assets/customer/images/thump-down.png">
                                 <span>Skip for now</span>
                             </button>
                             </div>
