--- a/src/app/layouts/customer-layout/introduction/standalone-sku-list/standalone-sku-list/standalone-sku-list.component.html
+++ b/src/app/layouts/customer-layout/introduction/standalone-sku-list/standalone-sku-list/standalone-sku-list.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col-lg-3 text-end">
-      <img src="assets/images/model-1.png" class="model-1">
+      <img src="assets/customer/images/model-1.png" class="model-1">
     </div>
     <div class="col-lg-9">
       <div class="speech-bubble">
@@ -43,40 +43,40 @@
                 </thead>
                 <tbody>
                   <tr valign="middle">
-                    <td><img src="assets/images/table-img.png" class="mx-3"> Green Coffee Bean w/GCA -800mg
+                    <td><img src="assets/customer/images/table-img.png" class="mx-3"> Green Coffee Bean w/GCA -800mg
                     </td>
                     <td class="text-center"><span class="blue-txt">ROC121</span></td>
                     <td class="text-center">$8.97</td>
                     <td class="text-center">15 units</td>
-                    <td class="text-center"><a href="" class="me-3"><img src="assets/images/table-ico-1.png"></a> <a href="" class="mr-0">
-                      <img src="assets/images/table-ico-2.png"></a></td>
+                    <td class="text-center"><a href="" class="me-3"><img src="assets/customer/images/table-ico-1.png"></a> <a href="" class="mr-0">
+                      <img src="assets/customer/images/table-ico-2.png"></a></td>
                   </tr>
                   <tr valign="middle">
-                    <td><img src="assets/images/table-img.png" class="mx-3"> Green Coffee Bean w/GCA -800mg
+                    <td><img src="assets/customer/images/table-img.png" class="mx-3"> Green Coffee Bean w/GCA -800mg
                     </td>
                     <td class="text-center"><span class="blue-txt">ROC121</span></td>
                     <td class="text-center">$8.97</td>
                     <td class="text-center">15 units</td>
-                    <td class="text-center"><a href="" class="me-3"><img src="assets/images/table-ico-1.png"></a> <a href="" class="mr-0">
-                      <img src="assets/images/table-ico-2.png"></a></td>
+                    <td class="text-center"><a href="" class="me-3"><img src="assets/customer/images/table-ico-1.png"></a> <a href="" class="mr-0">
+                      <img src="assets/customer/images/table-ico-2.png"></a></td>
                   </tr>
                   <tr valign="middle">
-                    <td><img src="assets/images/table-img.png" class="mx-3"> Green Coffee Bean w/GCA -800mg
+                    <td><img src="assets/customer/images/table-img.png" class="mx-3"> Green Coffee Bean w/GCA -800mg
                     </td>
                     <td class="text-center"><span class="blue-txt">ROC121</span></td>
                     <td class="text-center">$8.97</td>
                     <td class="text-center">15 units</td>
-                    <td class="text-center"><a href="" class="me-3"><img src="assets/images/table-ico-1.png"></a> <a href="" class="mr-0">
-                      <img src="assets/images/table-ico-2.png"></a></td>
+                    <td class="text-center"><a href="" class="me-3"><img src="assets/customer/images/table-ico-1.png"></a> <a href="" class="mr-0">
+                      <img src="assets/customer/images/table-ico-2.png"></a></td>
                   </tr>
                   <tr valign="middle">
-                    <td><img src="assets/images/table-img.png" class="mx-3"> Green Coffee Bean w/GCA -800mg
+                    <td><img src="assets/customer/images/table-img.png" class="mx-3"> Green Coffee Bean w/GCA -800mg
                     </td>
                     <td class="text-center"><span class="blue-txt">ROC121</span></td>
                     <td class="text-center">$8.97</td>
                     <td class="text-center">15 units</td>
-                    <td class="text-center"><a href="" class="me-3"><img src="assets/images/table-ico-1.png"></a> <a href="" class="mr-0">
-                      <img src="assets/images/table-ico-2.png"></a></td>
+                    <td class="text-center"><a href="" class="me-3"><img src="assets/customer/images/table-ico-1.png"></a> <a href="" class="mr-0">
+                      <img src="assets/customer/images/table-ico-2.png"></a></td>
                   </tr>
                  
                 </tbody>
@@ -87,8 +87,8 @@
 
           <div class="row mt-3">
             <div class="col-lg-12 text-center mb-4">
-              <div class="purchase d-inline"><button><img src="assets/images/thump-up.png"><span>SKU selection are OK</span></button></div>
-              <div class="skip d-inline"><button><img src="assets/images/thump-down.png"><span>NO, I need Select SKU again</span></button></div>
+              <div class="purchase d-inline"><button><img src="assets/customer/images/thump-up.png"><span>SKU selection are OK</span></button></div>
+              <div class="skip d-inline"><button><img src="assets/customer/images/thump-down.png"><span>NO, I need Select SKU again</span></button></div>
               <div class="clearfix"></div>
             </div>
             <div class="clearfix"></div>
