--- a/src/app/shared/customer-header/customer-header.component.html
+++ b/src/app/shared/customer-header/customer-header.component.html
@@ -1,13 +1,13 @@
 <div class="row p-2 header sticky-top">
     <div class="col-md-12">
-        <img src="assets/images/logo.png" class="logo">
+        <img src="assets/customer/images/logo.png" class="logo">
 
         <div class="dropdown text-end">
             <button class="btn btn-secondary dropdown-toggle profile-menu-button" type="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 Hi,David
             </button>
-            <span><img src="assets/images/admin-profile.jpg" class="profile-imgage"></span>
+            <span><img src="assets/customer/images/admin-profile.jpg" class="profile-imgage"></span>
             <ul class="dropdown-menu profile-submenu">
                 <li><a class="dropdown-item" href="#"><i class="fa-regular fa-user"></i> Profile</a></li>
                 <li><a class="dropdown-item" href="#"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
