--- a/src/app/shared/customer-header/customer-header.component.html
+++ b/src/app/shared/customer-header/customer-header.component.html
@@ -5,7 +5,7 @@
         <div class="dropdown text-end">
             <button class="btn btn-secondary dropdown-toggle profile-menu-button" type="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
-                Hi,David
+                Hi, {{loggedUserName}}
             </button>
             <span><img src="assets/customer/images/admin-profile.jpg" class="profile-imgage"></span>
             <ul class="dropdown-menu profile-submenu">
