--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -74,5 +74,11 @@
                 <p>{{menuItem.title}}</p>
             </a>
         </li>
+        <li class="">
+            <a (click)="logout()">
+                <i class="pe-7s-power"></i>
+                <p>Logout</p>
+            </a>
+        </li>
     </ul>
 </div>
